Fix inputs not showing focused state when the element with the class is not the actual input

--- a/indxo.app/src/app.css
+++ b/indxo.app/src/app.css
@@ -246,7 +246,7 @@
     }
 
     .input-primary {
-        @apply focus:border-attention rounded-input data-max:border-alert border-input bg-input flex items-center gap-1 border inset-shadow-sm inset-shadow-black/10 outline-none! focus:inset-shadow-none;
+        @apply focus-within:border-attention rounded-input data-max:border-alert border-input bg-input flex items-center gap-1 border inset-shadow-sm inset-shadow-black/10 outline-none! focus-within:inset-shadow-none;
     }
 
     .container-primary {
